@@ -43,7 +43,7 @@ $master_dbh->do('insert into issue_804.t values (999,999)');
 $output = `$trunk/mk-table-sync/mk-table-sync --sync-to-master h=127.1,P=12346,u=msandbox,p=msandbox -d issue_804 --print --algorithms Nibble 2>&1`;
 is(
    $output,
-   "REPLACE INTO `issue_804`.`t`(`purchaseId`, `accountId`) VALUES (999, 999);
+   "REPLACE INTO `issue_804`.`t`(`accountid`, `purchaseid`) VALUES (999, 999);
 ",
    'Nibble compares index case-insensitively (issue 804)'
 );
